# trainee-assignment

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
matrix_crawler/: __init__.py  matrix_operation.py
tests/: test_convert_str_to_matrix.py  test_fech_matrix_data.py  test_fetch_data.py  test_matrix_to_spiral.py
tests/fixtures/: non_square_matrix.txt  non_square_matrix_2.txt
trainee_assignment/: __init__.py  exceptions.py  matrix_operation.py  matrix_parsing.py  matrix_utils.py  parser.py  spiral_matrix.py
