[tool.poetry]
name = "trainee-assignment"
version = "0.1.0"
description = ""
authors = ["Asgef <asgefes1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
aiohttp = "^3.10.10"
flake8 = "^7.1.1"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
aioresponses = "^0.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
