[tool.poetry]
name = "matrix_crawler"
version = "0.1.0"
description = """
A Python library for retrieving, parsing, and converting matrix data \
into spiral order. Supports asynchronous HTTP requests with aiohttp \
and data validation for reliable matrix operations.
"""
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
authors = ["Asgef <asgefes1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
aiohttp = "^3.10.10"
flake8 = "^7.1.1"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
aioresponses = "^0.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
